# oga-local-service-atlas

./: .env.example  .gitignore  CONTRIBUTING.md  ROADMAP.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/core/: __init__.py  models.py  views.py
backend/apps/core/tests/: test_health.py
backend/apps/geography/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/infrastructure/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/reports/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: __init__.py  settings.py  urls.py  wsgi.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  geography.md  provenance.md  workflow.md
